spring-api: admin/user/profile controller