@@ -1,9 +1,5 @@
 package org.bootstrapbugz.api.user.unit;
 
-import org.bootstrapbugz.api.auth.service.JwtService;
-import org.bootstrapbugz.api.auth.util.JwtUtil.JwtPurpose;
-import org.bootstrapbugz.api.shared.error.exception.BadRequestException;
-import org.bootstrapbugz.api.shared.error.exception.ConflictException;
 import org.bootstrapbugz.api.shared.error.exception.ResourceNotFoundException;
 import org.bootstrapbugz.api.shared.message.service.MessageService;
 import org.bootstrapbugz.api.shared.util.TestUtil;
@@ -11,68 +7,73 @@ import org.bootstrapbugz.api.user.mapper.UserMapperImpl;
 import org.bootstrapbugz.api.user.model.Role;
 import org.bootstrapbugz.api.user.model.Role.RoleName;
 import org.bootstrapbugz.api.user.model.User;
-import org.bootstrapbugz.api.user.payload.request.ChangePasswordRequest;
-import org.bootstrapbugz.api.user.payload.request.UpdateUserRequest;
+import org.bootstrapbugz.api.user.payload.response.RoleResponse;
 import org.bootstrapbugz.api.user.payload.response.UserResponse;
 import org.bootstrapbugz.api.user.repository.UserRepository;
 import org.bootstrapbugz.api.user.service.impl.UserServiceImpl;
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Tag;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.TestInfo;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.ArgumentCaptor;
-import org.mockito.Captor;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.Spy;
 import org.mockito.junit.jupiter.MockitoExtension;
-import org.springframework.context.ApplicationEventPublisher;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.context.SecurityContext;
-import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 
-import java.util.Collections;
+import java.util.List;
 import java.util.Optional;
 import java.util.Set;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
-import static org.mockito.Mockito.times;
-import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
 @ExtendWith(MockitoExtension.class)
 class UserServiceTest {
+  private final Set<Role> userRoles = Set.of(new Role(RoleName.USER));
+  private final Set<Role> adminRoles = Set.of(new Role(RoleName.USER), new Role(RoleName.ADMIN));
+  private final User user =
+      new User(1L, "Test", "Test", "test", "test@test.com", null, true, true, userRoles);
+  private final User admin =
+      new User(2L, "Admin", "Admin", "admin", "admin@admin.com", null, true, true, adminRoles);
   @Mock private UserRepository userRepository;
   @Mock private MessageService messageService;
   @Spy private UserMapperImpl userMapper;
-  @Spy private BCryptPasswordEncoder bCryptPasswordEncoder;
-  @Mock private ApplicationEventPublisher eventPublisher;
-  @Mock private JwtService jwtService;
   @Mock private Authentication auth;
   @Mock private SecurityContext securityContext;
-
   @InjectMocks private UserServiceImpl userService;
 
-  @Captor private ArgumentCaptor<User> userArgumentCaptor;
+  @Test
+  void itShouldFindAllUsersWithoutRolesAndEmails() {
+    var expectedUserResponses =
+        List.of(
+            new UserResponse(1L, "Test", "Test", "test", null, true, true, null),
+            new UserResponse(2L, "Admin", "Admin", "admin", null, true, true, null));
+    when(userRepository.findAll()).thenReturn(List.of(user, admin));
+    var actualUserResponses = userService.findAll();
+    assertThat(actualUserResponses).isEqualTo(expectedUserResponses);
+  }
 
-  private String password;
-  private Set<Role> roles;
-  private User user;
-
-  @BeforeEach
-  void setUp(TestInfo info) {
-    if (info.getTags().contains("skipBeforeEach")) return;
-
-    password = bCryptPasswordEncoder.encode("qwerty123");
-    roles = Collections.singleton(new Role(RoleName.USER));
-    user = new User(1L, "Test", "Test", "test", "test@test.com", password, true, true, roles);
-    TestUtil.setAuth(auth, securityContext, user);
+  @Test
+  void itShouldFindAllUsersWithRolesAndEmails() {
+    TestUtil.setAuth(auth, securityContext, admin);
+    var userRoleResponses = Set.of(new RoleResponse(RoleName.USER.name()));
+    var adminRoleResponses =
+        Set.of(new RoleResponse(RoleName.USER.name()), new RoleResponse(RoleName.ADMIN.name()));
+    var expectedUserResponses =
+        List.of(
+            new UserResponse(
+                1L, "Test", "Test", "test", "test@test.com", true, true, userRoleResponses),
+            new UserResponse(
+                2L, "Admin", "Admin", "admin", "admin@admin.com", true, true, adminRoleResponses));
+    when(userRepository.findAllWithRoles()).thenReturn(List.of(user, admin));
+    var actualUserResponses = userService.findAll();
+    assertThat(actualUserResponses).isEqualTo(expectedUserResponses);
   }
 
   @Test
   void itShouldFindUserByUsername_showEmail() {
+    TestUtil.setAuth(auth, securityContext, user);
     var expectedUserResponse =
         new UserResponse(1L, "Test", "Test", "test", "test@test.com", true, true, null);
     when(userRepository.findByUsername("test")).thenReturn(Optional.of(user));
@@ -82,87 +83,18 @@ class UserServiceTest {
 
   @Test
   void itShouldFindUserByUsername_hideEmail() {
-    var expectedUserResponse = new UserResponse(1L, "Test", "Test", "test", null, true, true, null);
-    var signedInUser =
-        new User(2L, "User", "User", "user", "user@user.com", password, true, true, roles);
-    TestUtil.setAuth(auth, securityContext, signedInUser);
-    when(userRepository.findByUsername("test")).thenReturn(Optional.of(user));
-    var actualUserResponse = userService.findByUsername("test");
+    var expectedUserResponse =
+        new UserResponse(2L, "Admin", "Admin", "admin", null, true, true, null);
+    when(userRepository.findByUsername("admin")).thenReturn(Optional.of(admin));
+    var actualUserResponse = userService.findByUsername("admin");
     assertThat(actualUserResponse).isEqualTo(expectedUserResponse);
   }
 
   @Test
-  @Tag("skipBeforeEach")
   void findUserByUsernameShouldThrowResourceNotFound() {
     when(messageService.getMessage("user.notFound")).thenReturn("User not found.");
     assertThatThrownBy(() -> userService.findByUsername("test"))
         .isInstanceOf(ResourceNotFoundException.class)
         .hasMessage("User not found.");
-  }
-
-  @Test
-  void itShouldUpdateUser_newUsernameAndEmail() {
-    var expectedUser =
-        new User(1L, "User", "User", "user", "user@user.com", password, false, true, roles);
-    var updateUserRequest = new UpdateUserRequest("User", "User", "user", "user@user.com");
-    when(userRepository.existsByUsername(updateUserRequest.getUsername())).thenReturn(false);
-    when(userRepository.existsByEmail(updateUserRequest.getEmail())).thenReturn(false);
-    when(jwtService.createToken(1L, JwtPurpose.CONFIRM_REGISTRATION)).thenReturn("token");
-    userService.update(updateUserRequest);
-    verify(userRepository, times(1)).save(userArgumentCaptor.capture());
-    assertThat(userArgumentCaptor.getValue()).isEqualTo(expectedUser);
-  }
-
-  @Test
-  void itShouldUpdateUser_sameUsernameAndEmail() {
-    var expectedUser =
-        new User(1L, "User", "User", "test", "test@test.com", password, true, true, roles);
-    var updateUserRequest = new UpdateUserRequest("User", "User", "test", "test@test.com");
-    userService.update(updateUserRequest);
-    verify(userRepository, times(1)).save(userArgumentCaptor.capture());
-    assertThat(userArgumentCaptor.getValue()).isEqualTo(expectedUser);
-  }
-
-  @Test
-  void updateUserShouldThrowBadRequest_usernameExists() {
-    var updateUserRequest = new UpdateUserRequest("User", "User", "user", "user@user.com");
-    when(userRepository.existsByUsername(updateUserRequest.getUsername())).thenReturn(true);
-    when(messageService.getMessage("username.exists")).thenReturn("Username already exists.");
-    assertThatThrownBy(() -> userService.update(updateUserRequest))
-        .isInstanceOf(ConflictException.class)
-        .hasMessage("Username already exists.");
-  }
-
-  @Test
-  void updateUserShouldThrowBadRequest_emailExists() {
-    var updateUserRequest = new UpdateUserRequest("User", "User", "user", "user@user.com");
-    when(userRepository.existsByUsername(updateUserRequest.getUsername())).thenReturn(false);
-    when(userRepository.existsByEmail(updateUserRequest.getEmail())).thenReturn(true);
-    when(messageService.getMessage("email.exists")).thenReturn("Email already exists.");
-    assertThatThrownBy(() -> userService.update(updateUserRequest))
-        .isInstanceOf(ConflictException.class)
-        .hasMessage("Email already exists.");
-  }
-
-  @Test
-  void itShouldChangePassword() {
-    var changePasswordRequest = new ChangePasswordRequest("qwerty123", "qwerty1234", "qwerty1234");
-    userService.changePassword(changePasswordRequest);
-    verify(userRepository, times(1)).save(userArgumentCaptor.capture());
-    assertThat(
-            bCryptPasswordEncoder.matches(
-                changePasswordRequest.getNewPassword(),
-                userArgumentCaptor.getValue().getPassword()))
-        .isTrue();
-  }
-
-  @Test
-  void changePasswordShouldThrownBadRequest_wrongOldPassword() {
-    when(messageService.getMessage("oldPassword.invalid")).thenReturn("Wrong old password.");
-    var changePasswordRequest =
-        new ChangePasswordRequest("qwerty123456", "qwerty1234", "qwerty1234");
-    assertThatThrownBy(() -> userService.changePassword(changePasswordRequest))
-        .isInstanceOf(BadRequestException.class)
-        .hasMessage("Wrong old password.");
   }
 }
